--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         enable_lazy_load_no_trans: true
@@ -24,7 +24,7 @@ spring:
             non_contextual_creation: true
   sql:
     init:
-      mode: always
+      mode: never
 
 
 #logging:
